Update: 지역화(Localization)
- 다국어 지원 누락된 부분 수정

--- a/StickToIt/Application/Info.plist
+++ b/StickToIt/Application/Info.plist
@@ -2,10 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSCameraUsageDescription</key>
-	<string>이 앱이 사용자의 카메라에 접근하는 것을 허용하시겠습니까?</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>이 앱이 사용자의 앨범에 접근하는 것을 허용하시겠습니까?</string>
+	<string></string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string></string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
